# OSM-Viewer

./: CMakeLists.txt
shaders/: camera.glsl  capital.frag  frame.frag  frame.vert  main.frag  main.vert  text.frag  text.vert
src/: font.cpp  font.h  hashmap.h  main.cpp  triangulate.cpp  triangulate.h  utils.h  vec.h  window.cpp  window.h
src/data/: data.cpp  data.h
src/glad/: gl.c  gl.h
src/programs/: CMakeLists.txt  list.txt
src/programs/generator/: CMakeLists.txt  generator.cpp
src/proto/: CMakeLists.txt  osm.proto  proto_common.cpp  proto_common.h
src/proto/compiler/: CMakeLists.txt  proto.cpp
src/proto/converter/: CMakeLists.txt  converter.cpp  hashmap.h  string_switch.cpp  string_switch.h
src/proto/converter/enums/: CMakeLists.txt  gen.cpp
